--- a/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_right.conf
+++ b/config/boards/shields/eyeslash_corne/eyeslash_corne_peripheral_right.conf
@@ -7,7 +7,7 @@
 CONFIG_SPI=y
 #EXT POWER
 CONFIG_ZMK_EXT_POWER=y
-CONFIG_INPUT=y
+#CONFIG_INPUT=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_BRT_START=100
 CONFIG_ZMK_BACKLIGHT_ON_START=y
